feat: add API integration for loot logging with dotenv support

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "axios": "^0.30.0",
     "cap": "^0.2.1",
+    "dotenv": "^17.2.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
